# CANopenESP32

./: .gitmodules  Desaster4.eds  Desaster4.xdd  Gyro-Dictionary.xdd  Gyro-ESD.eds  README.md  clean-dunker-BG45CI.xdd  clean-dunker-BG45CI_working.xdd  clean-gyro.xdd  clean-hatox.xdd
ESP32_CANopen/: CMakeLists.txt  platformio.ini  sdkconfig  sdkconfig.old
ESP32_CANopen/components/CANopen/: CMakeLists.txt  CO_config.h  CO_driver.c
ESP32_CANopen/include/: Gyro.h  Hatox.h  dunker.h  hatox.h  imslROS.h  modul_config.h
ESP32_CANopen/lib/CANopen/: CO_config.h  CO_driver.c  CO_driver_target.h  config.h
ESP32_CANopen/lib/ros/: ESP32Hardware.h  esp_ros_network.c  esp_ros_network.h
ESP32_CANopen/lib/ros/control_msgs/: GripperCommand.h  GripperCommandFeedback.h  GripperCommandResult.h  JointControllerState.h  JointJog.h  JointTolerance.h  PidState.h  PointHeadFeedback.h  PointHeadGoal.h  SingleJointPositionFeedback.h  SingleJointPositionGoal.h
ESP32_CANopen/lib/ros/control_toolbox/: SetPidGains.h
ESP32_CANopen/lib/ros/drz_mod_bus_msgs/: ModuleMsg.h
ESP32_CANopen/lib/ros/dynamic_reconfigure/: DoubleParameter.h
ESP32_CANopen/lib/ros/gazebo_msgs/: ContactState.h  ODEJointProperties.h  ODEPhysics.h
ESP32_CANopen/lib/ros/map_msgs/: ProjectedMap.h  ProjectedMapInfo.h
ESP32_CANopen/lib/ros/modul_identification/: modul_identification_msg.h
ESP32_CANopen/main/: CMakeLists.txt  CO_OD.h  imslROS.cpp  main.cpp
ESP32_CANopen/src/: CO_OD.c  CO_OD.h  Gyro.c  Gyro.cpp  Gyro.h  Hatox.c  dunker.cpp  hatox.cpp  imslROS.cpp  main.c  main.cpp
ESP32_CANopen/test/: README
(+13 files in other folders)
